# sec-fincancial-statement-data-set

./: .gitignore  CHANGELOG.md  KNOWN_ISSUES.md  Notes.txt  README.md  _config.yml  analyzes.txt  ideas_automation.txt  index.md  launchjupyter.bat  pyproject.toml  pytest.ini  requirements.txt  secsdfstools.cfg  todos.txt
.augment/rules/: architecture_patterns.md  python_coding_rules.md  testing.md
.github/: FUNDING.yml  main.yml
.github/workflows/: docs.yml  main.yml  python-publish.yml
_docs/: about.md  gettingstarted.md
codedoc/PRDs/: daily_automation.md
doc_automation/: read.md
doc_latest/: index.md  read.md
doc_main/: index.md  read.md  readone.md  readtwo.md
doc_prep_1.4.2/: read.md
doc_release_2.2.0/: read.md
doc_segements/: read.md
doc_testwith_notes_set/: read.md
doc_v.1.2.0/: read.md
doc_v0.5.1/: index.md
doc_v1.0.1/: read.md
doc_v1.3.0/: read.md
doc_v1.7.0/: read.md
doc_v2.0.0/: read.md
doc_v2.4.1/: read.md
doc_version_BS_standardizer/: read.md
doc_version_CF_standardizer/: read.md
doc_vscode_switch/: read.md
docs/: index.md  releases.md
notebooks/: 01_quickstart.ipynb  02_connect_rapidapi.ipynb  02_connect_rapidapi_v2.ipynb  03_explore_with_interactive_notebook.ipynb  04_collector_deep_dive.ipynb  05_filter_deep_dive.ipynb  06_01_bulk_data_memory_efficiency.ipynb  06_bulk_data_processing.ipynb  06_bulk_data_processing_deep_dive.ipynb  07_00_standardizer_basics.ipynb  07_01_BS_standardizer.ipynb  07_02_IS_standardizer.ipynb  07_03_CF_standardizer.ipynb  07_04_customize_standardizer.ipynb  08_00_automation_basics.ipynb  08_01_automation_a_first_example_1.8.0.ipynb  08_02_automation_a_memory_optimized_example_2.2.0.ipynb  08_03_automation_supporting_daily_data_example_2.4.2.ipynb  09_00_segments_basics.ipynb  10_00_daily_financial_report_updates.ipynb  analyze.ipynb  explore.ipynb  medium_intro_secfsds.ipynb  segments_analysis.ipynb
notes/: Notes.txt  analyzes.txt  testguidelines.txt  todos.txt
pages/: releases.md
sandbox/: DownloadTransformIndexNew.py  accessreport_trials.py  analyze_bs.py  analyze_bs_structure.py  analyze_cf_structure.py  analyze_is_structure.py  analyze_structure.py  automation_example.py  automation_process.py  check_combined_datasets.py  companycollector.py  compare_pipeline_results.py  debug_BS.py  filter_run.py  measure_reportread.py  parquet_trials.py  presenter.py  single_select.py  sponsoring.py  sub.txt.parquet  timing.py  toparquet_transform_trial.py  trials.py  update_project.py  zipcollector.py
secfdstools/: dummy_content.py
secfsdstools/: __init__.py  index.html  index.md  update.html  update.md  update.py
secfsdstools/_0_config/: configmgt.py
secfsdstools/_0_utils/: dbutils.py  downloadutils.py  fileutils.py  parallelexecution.py
secfsdstools/_1_setup/: setupdb.py
secfsdstools/_2_download/: secdownloading.py
secfsdstools/_3_index/: indexdataaccess.py  indexing.py
secfsdstools/_4_read/: companyreading.py  reportreading.py
secfsdstools/_9_examples/: examplecompanyreading.py  examplecreportreading.py
secfsdstools/a_config/: configmgt.html  configmgt.md  configmgt.py  configmodel.html  configmodel.py  index.html  index.md
secfsdstools/a_utils/: basic.py  constants.py  dbutils.html  dbutils.md  dbutils.py  downloadutils.html  downloadutils.md  downloadutils.py  fileutils.html  fileutils.md  fileutils.py  index.html  index.md  parallelexecution.html  parallelexecution.md  parallelexecution.py  rapiddownloadutils.py
secfsdstools/b_setup/: index.md  setupdb.html  setupdb.md  setupdb.py
secfsdstools/c_automation/: automation_utils.py  secdownloading_process.py  task_framework.py
secfsdstools/c_download/: basedownloading.html  basedownloading.py  basedownloading_process.py  index.html  index.md  rapiddownloading.html  rapiddownloading.py  rapiddownloading_process.py  secdownloading.html  secdownloading.md  secdownloading.py  secdownloading_process.py
secfsdstools/c_index/: companyindexreading.py  index.html  indexdataaccess.py  indexing.py  indexing_process.py  searching.py
secfsdstools/c_transform/: toparquettransforming.py  toparquettransforming_process.py
secfsdstools/c_update/: updateprocess.py
secfsdstools/c_update_check/: __init__.py
secfsdstools/config/: configmgt.py
secfsdstools/d_container/: databagmodel.py  filter.py  presentation.py
secfsdstools/d_index/: index.html  index.md  indexdataaccess.html  indexdataaccess.md  indexdataaccess.py  indexing.html  indexing.md  indexing.py
secfsdstools/download/: secdownloading.py
secfsdstools/e_collector/: __init__.py  basecollector.py  companycollecting.py  multireportcollecting.py  reportcollecting.py  zipcollecting.py
secfsdstools/e_filter/: __init__.py  joinedfiltering.py  rawfiltering.py
secfsdstools/e_presenter/: presenting.py
secfsdstools/e_read/: basereportreading.html  basereportreading.py  companycollecting.html  companycollecting.py  companyreading.html  companyreading.md  companyreading.py  index.html  index.md  multireportreading.html  multireportreading.py  reportreading.html  reportreading.md  reportreading.py  searching.html  searching.md  searching.py  zipreportreading.html  zipreportreading.py
secfsdstools/f_export/: index.md
secfsdstools/f_standardize/: __init__.py  base_prepivot_rules.py  base_rule_framework.py  base_rules.py  base_validation_rules.py  bs_standardize.py  bs_standardize_old.py  cf_standardize.py  cf_standardize_v2.py  is_standardize.py  standardizing.py
secfsdstools/g_pipelines/: combine_process.py  concat_process.py  filter_process.py  pipeline_utils.py  standardize_process.py
secfsdstools/t_tools/: bulk_loading.py
secfsdstools/u_usecases/: analyzes.py  bulk_loading.py
secfsdstools/utils/: downloadutils.py  fileutils.py
secfsdstools/x_examples/: example_collectors.py  example_companyindexreader.py  example_indexsearch.py  example_presenter.py  examplecompanycollection.html  examplecompanycollection.py  examplecompanycollector.py  examplecompanyindex.py  (+15 more)
tests/: .pylintrc  conftest.py  test_dummy_content.py  test_examples.py
v0.5.1/: entry.md
(+555 files in other folders)
