[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secfsdstools"
version = "2.1.0"
authors = [
    { name="Hansjoerg Wingeier", email="hansjoerg.wingeier@gmail.com" },
]

dependencies = [
    "pandas>=1.3",
    "numpy>=1.0,<2.0",
    "requests>=2.0",
    "pathos~=0.3",
    "pyarrow>=8.0",
    "fastparquet>=0.5",
    "pandera==0.22.1"
]

description = "A few python tools to analyze the SEC.gov financial statements data sets (https://www.sec.gov/dera/data/financial-statement-data-sets)"
readme = "README.md"
long_description = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]

keywords=[
    "SEC.GOV",
    "SEC EDGAR",
    "SEC Filing",
    "EDGAR",
    "Finance",
    "CIK",
    "10-Q",
    "10-K",
    "8-K",
    "Financial Statements",
    "Financial Statements Dataset",
    "Financial Analysis",
    "Data Processing",
]

[project.urls]
"Homepage" = "https://hansjoergw.github.io/sec-fincancial-statement-data-set/"
"Bug Tracker" = "https://github.com/HansjoergW/sec-fincancial-statement-data-set/issues"
"Github" = "https://github.com/HansjoergW/sec-fincancial-statement-data-set"
"Changelog" = "https://github.com/HansjoergW/sec-fincancial-statement-data-set/blob/main/CHANGELOG.md"
"Funding" = "https://github.com/sponsors/HansjoergW"
"Forum" =  "https://github.com/HansjoergW/sec-fincancial-statement-data-set/discussions"

[project.optional-dependencies]
test = [
    "pytest~=8.3",
    "pylint~=2.13",
    "coverage~=7.0",
    "typing_extensions~=4.0",
    "pdoc3~=0.10"
]


[tool.hatch.build.targets.sdist]
exclude = [
    "/tests",
    "/docs",
    "/notebooks",
    "/sandbox"
]

[tool.hatch.build.targets.wheel]
exclude = [
    "/tests",
    "/docs",
    "/notebooks",
    "/sandbox"
]